# AAA_Team_1

./: .gitignore  AAA_Aufgaben_Uebersicht.md  data_sources.md  pyproject.toml  report.qmd
data/: chicago_weather_2025_hourly.csv  community_areas.csv
notebooks/: 00_data_loading.ipynb  01.1_data_exploration_taxis.ipynb  01.2_data_exploration_weather.ipynb
